--- a/top-nostr.html
+++ b/top-nostr.html
@@ -139,7 +139,7 @@
             return section;
         }
 
-        const url = 'https://arcadelabsinc.github.io/arcade-static/top.json';
+        const url = 'https://raw.githubusercontent.com/ArcadeLabsInc/arcade-static/main/top.json';
         
         // Create container
         const container = document.createElement('div');
